--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+numpy==1.26.0
 dask==2025.4.1
+bokeh==3.7.2
 ffmpeg-python==0.2.0
 distributed==2025.4.1
+inaSpeechSegmenter==0.7.14
+tensorflow==2.19.0
+
