feat: add utility functions for duration formatting and update Makefiles for memory settings

--- a/egs/sm_detection_ina/Makefile
+++ b/egs/sm_detection_ina/Makefile
@@ -12,8 +12,7 @@ corpus_dir?=./test
 output_dir?=./.data
 runner?=../../runner/target/release/runner
 workers?=4
-minimum_memory?=10
-limit_mb?=50
+minimum_memory?=10GB
 RUST_LOG?=trace
 ############################################################
 install/req:
