feat: add zipper functionality for compressing files with command-line interface

--- a/deploy/archyvis/Makefile
+++ b/deploy/archyvis/Makefile
@@ -16,4 +16,5 @@ copy/scripts:
 	scp -P $(port) ../../requirements.txt  $(user)@$(server):~/train-asr/
 	scp -P $(port) -r ./remote/*  $(user)@$(server):~/train-asr/
 	scp -P $(port) -r ../../egs  $(user)@$(server):~/train-asr/
+	scp -P $(port) ../../runner/target/release/zipper $(user)@$(server):~/train-asr/bin/
 	scp -P $(port) ../../runner/target/release/runner $(user)@$(server):~/train-asr/bin/
