feat: add backup functionality to Makefiles for saving output files

--- a/egs/diarization/Makefile
+++ b/egs/diarization/Makefile
@@ -48,4 +48,8 @@ run/runner/grid: | $(output_dir) $(cache_dir)
 		--same-dir --cache-file $(cache_dir)/.grid.cache
 .PHONY: run/runner/grid
 
+backup/res: 
+	$(zipper) --input $(output_dir) --output-file rttm.zip --names="audio.rttm, speech.rttm"
+.PHONY: backup/res
+
 .EXPORT_ALL_VARIABLES:
