--- a/deploy/archyvis/Makefile
+++ b/deploy/archyvis/Makefile
@@ -18,3 +18,18 @@ copy/scripts:
 	scp -P $(port) -r ../../egs  $(user)@$(server):~/train-asr/
 	scp -P $(port) ../../runner/target/release/zipper $(user)@$(server):~/train-asr/bin/
 	scp -P $(port) ../../runner/target/release/runner $(user)@$(server):~/train-asr/bin/
+
+dwn/ina: | ../../.backup/
+	scp -P $(port) $(user)@$(server):~/train-asr/egs/sm_detection_ina/ina_segments.zip ../../.backup/
+.PHONY: dwn/ina
+
+dwn/rttm: | ../../.backup/
+	scp -P $(port) $(user)@$(server):~/train-asr/egs/diarization/rttm.zip ../../.backup/
+.PHONY: dwn/rttm
+
+dwn/speaker.embeddings: | ../../.backup/
+	scp -P $(port) $(user)@$(server):~/train-asr/egs/speaker_embeddings/speaker.embeddings.zip ../../.backup/
+.PHONY: dwn/speaker_embeddings
+
+../../.backup/:
+	mkdir -p $@	
