feat: add device management for language detection and update Makefile for CUDA configuration

--- a/egs/id_lang/Makefile
+++ b/egs/id_lang/Makefile
@@ -4,7 +4,7 @@
 log?=INFO
 python_cmd=PYTHONPATH=./../../ LOG_LEVEL=$(log) python
 # CUDA?=cuda:0
-CUDA_VISIBLE_DEVICES=
+# CUDA_VISIBLE_DEVICES=
 TF_CPP_MIN_LOG_LEVEL=3
 corpus_dir?=./test
 output_dir?=./.data
