feat: use db in runner

--- a/deploy/archyvis/Makefile
+++ b/deploy/archyvis/Makefile
@@ -18,6 +18,8 @@ copy/scripts:
 	scp -P $(port) -r ../../egs  $(user)@$(server):~/train-asr/
 	scp -P $(port) ../../runner/target/release/zipper $(user)@$(server):~/train-asr/bin/
 	scp -P $(port) ../../runner/target/release/db-filler $(user)@$(server):~/train-asr/bin/
+	scp -P $(port) ../../runner/target/release/file-to-db $(user)@$(server):~/train-asr/bin/
+	scp -P $(port) ../../runner/target/release/db-to-file $(user)@$(server):~/train-asr/bin/
 	scp -P $(port) ../../runner/target/release/runner $(user)@$(server):~/train-asr/bin/
 
 dwn/ina: | ../../.backup/
