--- a/egs/id_lang/Makefile
+++ b/egs/id_lang/Makefile
@@ -33,16 +33,15 @@ run/runner/file: | $(output_dir)  $(cache_dir)
 		--cmd "python local/id.py --input {input} --output {output}" \
 		--output-file lang_detect.jsonl --extensions wav --minimum-memory $(minimum_memory) \
 		--same-dir --cache-file $(cache_dir)/.language.file.cache
-.PHONY: run/runner/file	
+.PHONY: run/runner/file
 
 run/runner/speaker: | $(output_dir)  $(cache_dir)
-	$(runner) --input $(output_dir) --output $(output_dir) --workers $(workers) \
-		--cmd "python local/id_speaker.py --input {input} --output {output}" \
-		--output-file lang_detect_speaker.jsonl --extensions wav,audio.rttm --minimum-memory $(minimum_memory) \
-		--same-dir --cache-file $(cache_dir)/.language.speaker.cache
+	$(runner) --input-base $(output_dir) --workers $(workers) \
+		--cmd "python local/id_speaker.py --input_wav {input_wav} --input_rttm {input} --output {output}" \
+		--output-files=lang_detect_speaker.jsonl --input-files=audio.rttm --minimum-memory $(minimum_memory)
 .PHONY: run/runner/speaker	
 
-backup/res: 
+backup/res:
 	$(zipper) --input $(output_dir) --output-file lang.zip --names="lang_detect_speaker.jsonl"
 .PHONY: backup/res
 
