feat: snipper-ws target to Makefile

--- a/deploy/archyvis/Makefile
+++ b/deploy/archyvis/Makefile
@@ -9,6 +9,12 @@ ssh:
 ssh/8787:
 	ssh -L 8787:127.0.0.1:8787 -p $(port) $(user)@$(server)
 
+ssh/psql:
+	ssh -L 5432:127.0.0.1:5432 -p $(port) $(user)@$(server)
+
+ssh/snipper:
+	ssh -L 8000:127.0.0.1:8000 -p $(port) $(user)@$(server)
+
 copy/scripts:
 	$(SSH_CMD) "mkdir -p train-asr/bin"	
 	scp -P $(port) -r ../../preparation  $(user)@$(server):~/train-asr/
@@ -21,6 +27,7 @@ copy/scripts:
 	scp -P $(port) ../../runner/target/release/file-to-db $(user)@$(server):~/train-asr/bin/
 	scp -P $(port) ../../runner/target/release/db-to-file $(user)@$(server):~/train-asr/bin/
 	scp -P $(port) ../../runner/target/release/collect-jsonl $(user)@$(server):~/train-asr/bin/
+	scp -P $(port) ../../runner/target/release/snipper-ws $(user)@$(server):~/train-asr/bin/
 	scp -P $(port) ../../runner/target/release/runner $(user)@$(server):~/train-asr/bin/
 
 #########################################################################
