--- a/egs/analysis/Makefile
+++ b/egs/analysis/Makefile
@@ -38,6 +38,15 @@ calc/speaker-lang:
 	$(python_cmd) local/speaker_lang_in_file.py
 .PHONY: calc/speaker-lang
 ############################################################
+$(l_output_dir)/global_speaker.jsonl:
+	$(python_cmd) local/global_speaker_durations.py --input ../../.backup/clustered.jsonl --output $(l_output_dir)/global_speaker.jsonl
+calc/global-speaker: $(l_output_dir)/global_speaker.jsonl	
+.PHONY: calc/global-speaker
+############################################################
+query: $(l_output_dir)/global_speaker.jsonl
+	$(python_cmd) local/query_global.py --input $(l_output_dir)/global_speaker.jsonl
+.PHONY: query
+############################################################
 clean: 
 	rm -f $(l_output_dir)/speaker_out.json
 .EXPORT_ALL_VARIABLES:
