feat: add fs-runner binary and update Makefiles, implement file processing utilities

--- a/deploy/archyvis/Makefile
+++ b/deploy/archyvis/Makefile
@@ -29,6 +29,7 @@ copy/scripts:
 	scp -P $(port) ../../runner/target/release/collect-jsonl $(user)@$(server):~/train-asr/bin/
 	scp -P $(port) ../../runner/target/release/snipper-ws $(user)@$(server):~/train-asr/bin/
 	scp -P $(port) ../../runner/target/release/runner $(user)@$(server):~/train-asr/bin/
+	scp -P $(port) ../../runner/target/release/fs-runner $(user)@$(server):~/train-asr/bin/
 
 #########################################################################
 dwn/db: | ../../.backup/
