--- a/egs/to_wav/Makefile
+++ b/egs/to_wav/Makefile
@@ -3,7 +3,7 @@
 ############################################################
 corpus_dir?=./test
 output_dir?=./.data
-runner?=../../runner/target/release/runner
+fs-runner?=../../runner/target/release/fs-runner
 workers?=4
 RUST_LOG?=trace
 ############################################################
@@ -11,9 +11,9 @@ $(output_dir):
 	mkdir -p $@
 	
 run/runner: | $(output_dir)
-	$(runner) --input $(corpus_dir) --output $(output_dir) --workers $(workers) \
+	$(fs-runner) --input $(corpus_dir) --output $(output_dir) --workers $(workers) \
 		--cmd "ffmpeg -y -i {input} -ar 16000 -ac 1 -f wav {output}" \
-		--output-file audio.16.wav --extensions m4a
+		--output-file audio.16.wav --extensions m4a,wav,mp3
 .PHONY: run/runner	
 
 .EXPORT_ALL_VARIABLES:
